--- a/BaseProject/BaseProject/Control/WKWebVIew/index.html
+++ b/BaseProject/BaseProject/Control/WKWebVIew/index.html
@@ -28,7 +28,8 @@
             window.location.href="https://www.baidu.com";
         }
         function openOCClick() {
-            window.webkit.messageHandlers.showJSToOC.postMessage("1234567");
+         //window.webkit.messageHandlers.showJSToOC.postMessage("1234567");
+          window.prompt("我要调用OC的方法");
         }
         //window.webkit.messageHandlers.CallApp.postMessage("1234567");button
     </script>
